--- a/.github/workflows/black.yaml
+++ b/.github/workflows/black.yaml
@@ -132,6 +132,10 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
+
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add apps/pv_opt/pv_opt.py README.md
@@ -140,4 +144,4 @@ jobs:
             exit 0
           fi
           git commit -m "Update version to ${{ env.new_patch_version }}"
-          git push origin $GITHUB_HEAD_REF
+          git push origin HEAD        
