--- a/.github/workflows/black.yaml
+++ b/.github/workflows/black.yaml
@@ -29,7 +29,7 @@ jobs:
       - name: Format Code with Black and isort
         run: |
           black --line-length=119 .
-          isort .
+          isort --profile="black" .
 
       # Step 5: Commit Formatting Changes
       - name: Commit Formatting Changes
@@ -68,26 +68,23 @@ jobs:
       - name: Get Latest Tag
         id: get_latest_tag
         run: |
-          LATEST_TAG=$(git tag --list | sort -V | tail -n 1)
+          LATEST_TAG=$(git describe --tags --abbrev=0)
           if [ -z "$LATEST_TAG" ]; then
             echo "Error: No tags found in the repository." >&2
             exit 1
           fi
-          echo "LATEST_TAG=$LATEST_TAG" >> $GITHUB_ENV
-          echo "Latest Tag: '$LATEST_TAG'"
+          echo "latest_tag=$LATEST_TAG" >> $GITHUB_ENV
 
       - name: Get VERSION from Latest Tag
         id: get_tag_version
         run: |
-          VERSION=$(echo "$LATEST_TAG" | sed -E 's/^v([0-9]+\\.[0-9]+\\.[0-9]+)$/\\1/')
-          echo "Extracted VERSION: '$VERSION'"
+          VERSION=$(echo "$LATEST_TAG" | sed -E 's/^v([0-9]+\.[0-9]+\.[0-9]+)$/\1/')
           if [ -z "$VERSION" ]; then
             echo "Error: VERSION could not be extracted from the latest tag." >&2
             exit 1
           fi
           echo "tag_version=$VERSION" >> $GITHUB_ENV
-  
-        
+
       - name: Get VERSION from Current Branch
         id: get_patch_version
         run: |
@@ -114,18 +111,18 @@ jobs:
             new_patch_version="$tag_major.$((tag_minor + 1)).0"
           else
             echo "Error: Unsupported source branch type." >&2
-            exit 1 
-          fi 
+            exit 1
+          fi
 
-          sed -i "s/^VERSION = \".*\"/VERSION = \"$new_patch_version\"/" apps/pv_opt/pv_opt.py
-          echo "Corrected version to $new_patch_version."
-          echo "new_patch_version=$new_patch_version" >> $GITHUB_ENV
+          sed -i "s/^VERSION = \".*\"/VERSION = \"v$new_patch_version\"/" apps/pv_opt/pv_opt.py
+          echo "Corrected version to v$new_patch_version."
+          echo "new_patch_version=v$new_patch_version" >> $GITHUB_ENV
           echo "VERSION_CHANGED=true" >> $GITHUB_ENV
 
       - name: Update README.md version
         run: |
           new_patch_version=${{ env.new_patch_version }}
-          sed -i "1s/v[0-9]*\.[0-9]*\.[0-9]*/v$new_patch_version/" README.md
+          sed -i "1s/v[0-9]*\.[0-9]*\.[0-9]*/$new_patch_version/" README.md
 
       - name: Commit Version Changes
         if: env.VERSION_CHANGED == 'true'
@@ -134,7 +131,7 @@ jobs:
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-          git checkout -B $GITHUB_HEAD_REF  # Create or switch to the correct branch
+          git checkout -B $GITHUB_HEAD_REF
           git add apps/pv_opt/pv_opt.py README.md
           if git diff --cached --quiet; then
             echo "No version changes to commit."
@@ -142,4 +139,3 @@ jobs:
           fi
           git commit -m "Update version to ${{ env.new_patch_version }}"
           git push origin $GITHUB_HEAD_REF
-  
