--- a/.github/workflows/black.yaml
+++ b/.github/workflows/black.yaml
@@ -78,7 +78,7 @@ jobs:
       - name: Get VERSION from Latest Tag
         id: get_tag_version
         run: |
-          VERSION=$(echo "$LATEST_TAG" | sed -E 's/^v([0-9]+\.[0-9]+\.[0-9]+)$/\1/')
+          VERSION=$(echo "$LATEST_TAG" | sed -E 's/^v([0-9]+\\.[0-9]+\\.[0-9]+)$/\\1/')
           if [ -z "$VERSION" ]; then
             echo "Error: VERSION could not be extracted from the latest tag." >&2
             exit 1
