--- a/.github/workflows/black.yaml
+++ b/.github/workflows/black.yaml
@@ -68,22 +68,26 @@ jobs:
       - name: Get Latest Tag
         id: get_latest_tag
         run: |
-          LATEST_TAG=$(git describe --tags --abbrev=0)
+          LATEST_TAG=$(git tag --list | sort -V | tail -n 1)
           if [ -z "$LATEST_TAG" ]; then
             echo "Error: No tags found in the repository." >&2
             exit 1
           fi
-          echo "latest_tag=$LATEST_TAG" >> $GITHUB_ENV
+          echo "LATEST_TAG=$LATEST_TAG" >> $GITHUB_ENV
+          echo "Latest Tag: '$LATEST_TAG'"
 
       - name: Get VERSION from Latest Tag
         id: get_tag_version
         run: |
           VERSION=$(echo "$LATEST_TAG" | sed -E 's/^v([0-9]+\\.[0-9]+\\.[0-9]+)$/\\1/')
+          echo "Extracted VERSION: '$VERSION'"
           if [ -z "$VERSION" ]; then
             echo "Error: VERSION could not be extracted from the latest tag." >&2
             exit 1
           fi
           echo "tag_version=$VERSION" >> $GITHUB_ENV
+  
+  
 
       - name: Get VERSION from Current Branch
         id: get_patch_version
