--- a/apps/pv_opt/config/config.yaml
+++ b/apps/pv_opt/config/config.yaml
@@ -121,7 +121,7 @@ pv_opt:
   # ========================================
   # Octopus account parameters
   # ========================================
-  # octopus_auto: False # Read tariffs from the Octopus Energy integration. If successful this over-rides the following parameters
+  octopus_auto: False # Read tariffs from the Octopus Energy integration. If successful this over-rides the following parameters
   # octopus_account: !secret octopus_account
   # octopus_api_key: !secret octopus_api_key
 
@@ -159,12 +159,12 @@ pv_opt:
 
   # octopus_import_tariff_code: E-1R-AGILE-23-12-06-G
   # # octopus_export_tariff_code: E-1R-OUTGOING-LITE-FIX-12M-23-09-12-G
-  # octopus_export_tariff_code: E-1R-OUTGOING-FIX-12M-19-05-13-G
+  octopus_export_tariff_code: E-1R-OUTGOING-FIX-12M-19-05-13-G
 
   # octopus_import_tariff_code: E-1R-FLUX-IMPORT-23-02-14-G
   # octopus_export_tariff_code: E-1R-FLUX-EXPORT-23-02-14-G
 
-  # octopus_import_tariff_code: E-1R-GO-VAR-22-10-14-N
+  octopus_import_tariff_code: E-1R-GO-VAR-22-10-14-N
   # octopus_export_tariff_code: E-1R-OUTGOING-LITE-FIX-12M-23-09-12-N
 
   # ========================================
