--- a/apps/pv_opt/config/config.yaml
+++ b/apps/pv_opt/config/config.yaml
@@ -444,19 +444,19 @@ pv_opt:
 
   # Tariff comparison
   # id_daily_solar: sensor.{device_name}_power_generation_today
-  # id_solar_power:
-  # #   - sensor.{device_name}_pv_power_1
-  # #   - sensor.{device_name}_pv_power_2
-  # alt_tariffs:
-  #   - name: Agile_Fix
-  #     octopus_import_tariff_code: E-1R-AGILE-23-12-06-G
-  #     octopus_export_tariff_code: E-1R-OUTGOING-FIX-12M-19-05-13-G
+  id_solar_power:
+    - sensor.{device_name}_pv_power_1
+    - sensor.{device_name}_pv_power_2
+  alt_tariffs:
+    - name: Agile_Fix
+      octopus_import_tariff_code: E-1R-AGILE-23-12-06-G
+      octopus_export_tariff_code: E-1R-OUTGOING-FIX-12M-19-05-13-G
 
-  #   #   - name: Eco7_Fix
-  #   #     octopus_import_tariff_code: E-2R-VAR-22-11-01-G
-  #   #     octopus_export_tariff_code: E-1R-OUTGOING-FIX-12M-19-05-13-G
+    #   - name: Eco7_Fix
+    #     octopus_import_tariff_code: E-2R-VAR-22-11-01-G
+    #     octopus_export_tariff_code: E-1R-OUTGOING-FIX-12M-19-05-13-G
 
-  #   - name: Flux
-  #     octopus_import_tariff_code: E-1R-FLUX-IMPORT-23-02-14-G
-  #     octopus_export_tariff_code: E-1R-FLUX-EXPORT-23-02-14-G
+    - name: Flux
+      octopus_import_tariff_code: E-1R-FLUX-IMPORT-23-02-14-G
+      octopus_export_tariff_code: E-1R-FLUX-EXPORT-23-02-14-G
 
